--- a/src/locale/lang.ko.json
+++ b/src/locale/lang.ko.json
@@ -3,10 +3,10 @@
   "title.amount": "보낼수량",
   "title.receiverAddress": "받는지갑주소",
 
-  "valid.mnemonic.01": "알파벳과 공백만 허용 됩니다.",
+  "valid.mnemonic.01": "알파벳과 공백만 입력 가능합니다.",
   "valid.mnemonic.02": "니모닉문구는 12개 혹은 24개 단어입니다.",
   "valid.receiverAddress.01": "prefix 일치여부를 확인해주세요. ex) nova.. or cosmos..",
-  "valid.receiverAddress.02": "소문자 알파벳과 숫자만 입력 가능합니다.",
+  "valid.receiverAddress.02": "알파벳과 숫자만 입력 가능합니다.",
   "valid.receiverAddress.03": "주소길이를 확인해주세요 (prefix제외 39자리)",
 
   "valid.amount.01": "0과 같거나 보다 작은 수 입력 불가",
